fixed account pages spacing and BEM naming

--- a/client/src/Components/CreateAccount/CreateAccount.scss
+++ b/client/src/Components/CreateAccount/CreateAccount.scss
@@ -9,7 +9,7 @@
   &__header {
     font-size: 1.5rem;
     font-weight: 600;
-    margin: 3rem 0 2rem;
+    margin: 2.5rem 0 2rem;
   }
 
   &__form {
@@ -21,6 +21,7 @@
 
   &__label {
     font-weight: bold;
+    padding-bottom: 0.25rem;
   }
 
   &__input {
@@ -44,7 +45,7 @@
   &__button {
     padding: 0.5rem;
     border-radius: 2px;
-    margin-top: 2rem;
+    margin-top: 1rem;
     background-color: $primary-gold;
     border: none;
     font-weight: bold;
